--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="it.zenitlab.cordova.plugins.cordova-zebra-print"
+    id="it.zenitlab.cordova.plugins.zbtprinter"
     version="1.0">
 
     <name>ZebraBluetoothPrinter</name>
@@ -11,7 +11,7 @@
     </engines>    
 
     <js-module src="www/zbtprinter.js" name="ZebraBluetoothPrinter">
-        <clobbers target="cordova.plugins.cordova-zebra-print" />
+        <clobbers target="cordova.plugins.zbtprinter" />
     </js-module>
 
     <!-- android -->
@@ -24,7 +24,7 @@
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="ZebraBluetoothPrinter">
-                <param name="android-package" value="it.zenitlab.cordova.plugins.cordova-zebra-print.ZebraBluetoothPrinter" />
+                <param name="android-package" value="it.zenitlab.cordova.plugins.zbtprinter.ZebraBluetoothPrinter" />
             </feature>
         </config-file>
 
