--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "1.0.0",
-  "name": "cordova-plugin-zbtprinter",
+  "version": "1.0.1",
+  "name": "cordova-plugin-zebra_printer",
   "description": "Cordova/Phonegap driver for Zebra bluetooth printers",
   "repository": {
     "type": "git",
@@ -30,5 +30,13 @@
       "version": ">=3.0.0"
     }
   ],
-  "homepage": "https://github.com/kevbarrios/zbtprinter#readme"
+  "homepage": "https://github.com/kevbarrios/zbtprinter#readme",
+  "bugs": {
+    "url": "https://github.com/kevbarrios/zbtprinter/issues"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT"
 }
