--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.github.kevbarrios.zbtprinter"
-    version="1.0">
+    version="1.1.9">
 
     <name>ZebraBluetoothPrinter</name>
 	<description>A Cordova/Phonegap driver for Zebra bluetooth printers</description>
@@ -19,6 +19,7 @@
 
       <config-file target="AndroidManifest.xml" parent="/*">
          <uses-permission android:name="android.permission.BLUETOOTH" />
+         <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
       </config-file>
 	  <source-file src="src/android/com/github/kevbarrios/zbtprinter/ZebraBluetoothPrinter.java" target-dir="src/android/com/github/kevbarrios/zbtprinter" />
 
